# apache_beam_challange

./: .gitignore  pyproject.toml
infrastructure/: create_project.sh
infrastructure/terraform/: .terraform.lock.hcl  main.tf  variables.tf
notebooks/: .requirements_new.txt.kate-swp  development copy.ipynb  development.ipynb  requirements_new.txt
pipelines/: cycle_rides.py  setup.py  sql_cycle_rides.py  stations.py  total_distance.py  total_distance_clean.py
pipelines/Coding_Challenge.egg-info/: SOURCES.txt  requires.txt
src/: read_data.py  setup.py
