[tool.poetry]
name = "ml6-challange"
version = "0.1.0"
description = ""
authors = ["Wesley <rademakerwesley@gmail.com>"]
readme = "README.md"
packages = [{include = "ml6_challange"}]

[tool.poetry.dependencies]
python = "^3.11"
apache-beam = {extras = ["gcp"], version = "^2.52.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
