[tool.poetry]
name = "ml6-challange"
version = "0.1.0"
description = ""
authors = ["Wesley <rademakerwesley@gmail.com>"]
readme = "README.md"
packages = [{include = "ml6_challange"}]

[tool.poetry.dependencies]
python = "^3.11"
apache-beam = {extras = ["interactive"], version = "^2.52.0"}
notebook = "^7.0.6"
jupyter-contrib-nbextensions = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
